--- a/01-yad/lib/sparky-aptus-appcenter/system-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 24, 2021 by pavroo
 -->
 	<head>
 		<title>System -> Others | APTus AppCenter</title>
@@ -57,6 +57,8 @@ Last update: June 13, 2021 by pavroo
 		<td><a href="aptus://sysoth_nvidia-settings" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvidia Settings</a>
 		</td>
 		<td><a href="aptus://sysoth_sparky-eraser" class="button1"><img src="images1/bleachbit.svg" class="appicon"><br />Sparky Eraser</a>
+		</td>
+		<td><a href="aptus://sysoth_sparky-welcome" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky Welcome</a>
 		</td>
 		<td><a href="aptus://sysoth_timekpr-next" class="button1"><img src="images/clock.svg" class="appicon"><br />Time Keeper Next</a>
 		</td>
