--- a/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: August 1, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://audtoo_cecilia" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cecilia</a>
 		</td>
+		<td><a href="aptus://audtoo_chirp" class="button1"><img src="images/radio.svg" class="appicon"><br />Chirp</a>
+		</td>
 		<td><a href="aptus://audtoo_dgedit" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />DGEdit</a>
 		</td>
 		<td><a href="aptus://audtoo_din" class="button1"><img src="images/noise.svg" class="appicon"><br />DIN Is Noise</a>
@@ -64,10 +66,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
 		</td>
-		<td><a href="aptus://audtoo_freedv" class="button1"><img src="images/radio.svg" class="appicon"><br />FreeDV</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_freedv" class="button1"><img src="images/radio.svg" class="appicon"><br />FreeDV</a>
+		</td>
 		<td><a href="aptus://audtoo_gjacktransport" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gjacktransport</a>
 		</td>
 		<td><a href="aptus://audtoo_gmorgan" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />gmorgan</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_jaaa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JACK and ALSA Audio Analyser</a>
 		</td>
-		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
+		</td>
 		<td><a href="aptus://audtoo_kluppe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kluppe</a>
 		</td>
 		<td><a href="aptus://audtoo_kmix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMix</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_milkytracker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Milky Tracker</a>
 		</td>
-		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
+		</td>
 		<td><a href="aptus://audtoo_muse" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MusE</a>
 		</td>
 		<td><a href="aptus://audtoo_padthv1" class="button1"><img src="images/noise.svg" class="appicon"><br />Padthv1</a>
@@ -106,10 +108,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_qjackctl" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QjackCtl</a>
 		</td>
-		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
+		</td>
 		<td><a href="aptus://audtoo_qsynth" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QSynth</a>
 		</td>
 		<td><a href="aptus://audtoo_rosegarden" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rosegarden</a>
@@ -120,10 +122,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_simplest-studio" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Simplest Studio</a>
 		</td>
-		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
+		</td>
 		<td><a href="aptus://audtoo_soundconverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />SoundConverter</a>
 		</td>
 		<td><a href="aptus://audtoo_snd-gtk-jack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sound file editor</a>
@@ -134,10 +136,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_sweep" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sweep</a>
 		</td>
-		<td><a href="aptus://audtoo_tangerine" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tangerine</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_tangerine" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tangerine</a>
+		</td>
 		<td><a href="aptus://audtoo_tuxguitar" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tux Guitar</a>
 		</td>
 		<td><a href="aptus://audtoo_vkeybd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vkeybd</a>
@@ -148,6 +150,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_xcutmp3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />xcutmp3</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
 		</td>
 	</tr>
