--- a/6/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/6/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2021 by pavroo
+Last update: August 27, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -100,6 +100,8 @@ Last update: July 23, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
 		</td>
+		<td><a href="aptus://graedi_pinta" class="button1"><img src="images/krita.svg" class="appicon"><br />Pinta</a>
+		</td>
 		<td><a href="aptus://graedi_posterazor" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Posterazor</a>
 		</td>
 		<td><a href="aptus://graedi_rawtherapee" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />RawTherapee</a>
@@ -108,10 +110,10 @@ Last update: July 23, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_synfigstudio" class="button1"><img src="images/totem.svg" class="appicon"><br />Synfig Studio</a>
 		</td>
-		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
+		</td>
 		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
 		</td>
 		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
