--- a/6/lib/sparky-aptus-appcenter/net-rss.html
+++ b/6/lib/sparky-aptus-appcenter/net-rss.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: August 27, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Feeds | APTus AppCenter</title>
@@ -42,10 +42,18 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://netrss_akregator" class="button1"><img src="images/akregator.svg" class="appicon"><br />Akregator</a>
 		</td>
+		<td><a href="aptus://netrss_feedreader" class="button1"><img src="images/rss.svg" class="appicon"><br />FeedReader</a>
+		</td>
+		<td><a href="aptus://netrss_gnome-feeds" class="button1"><img src="images/rss.svg" class="appicon"><br />GNOME-Feeds</a>
+		</td>
 		<td><a href="aptus://netrss_liferea" class="button1"><img src="images/rss.svg" class="appicon"><br />Liferea</a>
+		</td>
+		<td><a href="aptus://netrss_newsboat" class="button1"><img src="images/rss.svg" class="appicon"><br />NewsBoat</a>
 		</td>
 		<td><a href="aptus://netrss_quiterss" class="button1"><img src="images/rss.svg" class="appicon"><br />Quiterss</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netrss_rssguard" class="button1"><img src="images/rss.svg" class="appicon"><br />RSS Guard</a>
 		</td>
 		<td><a href="aptus://netrss_rsstail" class="button1"><img src="images/rss.svg" class="appicon"><br />RSSTail</a>
