--- a/7/lib/sparky-aptus-appcenter/office-finance.html
+++ b/7/lib/sparky-aptus-appcenter/office-finance.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: August 27, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Finance | APTus AppCenter</title>
@@ -55,6 +55,8 @@ Last update: June 13, 2021 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://offfin_ledger" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ledger</a>
+		</td>
+		<td><a href="aptus://offfin_litecoin-qt" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Litecoin</a>
 		</td>
 		<td><a href="aptus://offfin_monero" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Monero Client</a>
 		</td>
