Add zh_CN translation
* Add zh_CN translation
* Edit lib/sparky-aptus-appcenter/aptus-appcenter to check zh_CN in LANG var
* Change my nickname to the commonly used one

--- a/7/lib/sparky-aptus-appcenter/info.html
+++ b/7/lib/sparky-aptus-appcenter/info.html
@@ -62,7 +62,7 @@ Last update: August 27, 2021 by pavroo
 - pt_BR: Claudio Cesar de Sá & Elton Fabrício Ferreira<br>
 - pt_PT: Joel Chaves "Flacc" & José Vieira<br>
 - ru: ChourS<br>
-- zh_CN: xingjiapeng<br>
+- zh_CN: OkayPJ<br>
 &nbsp;<br />
 <span><script>dict.print('main', 'info09');</script></span><br />
 </p>	
