--- a/6/lib/sparky-aptus-appcenter/net-rss.html
+++ b/6/lib/sparky-aptus-appcenter/net-rss.html
@@ -48,7 +48,7 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netrss_liferea" class="button1"><img src="images/rss.svg" class="appicon"><br />Liferea</a>
 		</td>
-		<td><a href="aptus://netrss_newsboat" class="button1"><img src="images/rss.svg" class="appicon"><br />NewsBoat</a>
+		<td><a href="aptus://netrss_newsboat" class="button1"><img src="images/terminal.svg" class="appicon"><br />NewsBoat</a>
 		</td>
 		<td><a href="aptus://netrss_quiterss" class="button1"><img src="images/rss.svg" class="appicon"><br />Quiterss</a>
 		</td>
