--- a/7/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 27, 2021 by pavroo
+Last update: September 4, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -44,16 +44,18 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_alltray" class="button1"><img src="images1/panel.svg" class="appicon"><br />AllTray</a>
 		</td>
+		<td><a href="aptus://accoth_bbrun" class="button1"><img src="images/default-icon.svg" class="appicon"><br />bbrun</a>
+		</td>
 		<td><a href="aptus://accoth_bemenu" class="button1"><img src="images1/panel.svg" class="appicon"><br />Bemenu</a>
 		</td>
 		<td><a href="aptus://accoth_catfish" class="button1"><img src="images1/catfish.svg" class="appicon"><br />Catfish</a>
 		</td>
 		<td><a href="aptus://accoth_ding" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Ding</a>
 		</td>
-		<td><a href="aptus://accoth_fbpanel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Fbpanel</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_fbpanel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Fbpanel</a>
+		</td>
 		<td><a href="aptus://accoth_gammy" class="button1"><img src="images/backlight.svg" class="appicon"><br />Gammy</a>
 		</td>
 		<td><a href="aptus://accoth_gexec" class="button1"><img src="images/default-icon.svg" class="appicon"><br />gExec</a>
@@ -64,11 +66,13 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Golden Dict</a>
 		</td>
-		<td><a href="aptus://accoth_i3lock" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_i3lock" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock</a>
+		</td>
 		<td><a href="aptus://accoth_i3lock-fancy" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock fancy</a>
+		</td>
+		<td><a href="aptus://accoth_kdocker" class="button1"><img src="images1/panel.svg" class="appicon"><br />KDocker</a>
 		</td>
 		<td><a href="aptus://accoth_komorebi" class="button1"><img src="images/desktop.svg" class="appicon"><br />Komorebi</a>
 		</td>
@@ -76,12 +80,12 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
 		</td>
 		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_obconf" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf</a>
 		</td>
 		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
@@ -90,12 +94,12 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_qreator" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qreator</a>
 		</td>
 		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_qtqr" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />QtQR</a>
 		</td>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
@@ -104,12 +108,12 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-backlight" class="button1"><img src="images/backlight.svg" class="appicon"><br />Sparky BackLight</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
@@ -118,12 +122,10 @@ Last update: August 27, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
-		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
-		</td>
-		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
+		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
 		</td>
 	</tr>
