--- a/6/lib/sparky-aptus-appcenter/net-communication.html
+++ b/6/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: September 13, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -117,14 +117,16 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
 		</td>
+		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
+		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
 		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
-		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
+		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
 	</tr>
