--- a/7/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/7/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 1, 2021 by pavroo
+Last update: September 13, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -124,6 +124,8 @@ Last update: August 1, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_sonobus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SonoBus</a>
+		</td>
 		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
 		</td>
 		<td><a href="aptus://audtoo_soundconverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />SoundConverter</a>
@@ -134,10 +136,10 @@ Last update: August 1, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
 		</td>
-		<td><a href="aptus://audtoo_sweep" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sweep</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_sweep" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sweep</a>
+		</td>
 		<td><a href="aptus://audtoo_tangerine" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tangerine</a>
 		</td>
 		<td><a href="aptus://audtoo_tuxguitar" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tux Guitar</a>
@@ -148,10 +150,10 @@ Last update: August 1, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
 		</td>
-		<td><a href="aptus://audtoo_xcutmp3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />xcutmp3</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_xcutmp3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />xcutmp3</a>
+		</td>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
 		</td>
 	</tr>
