--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: September 13, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -82,6 +82,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_jove" class="button1"><img src="images/terminal.svg" class="appicon"><br />Jove</a>
+		</td>
 		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
 		</td>
 		<td><a href="aptus://offtex_jupp" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jupp</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
-		<td><a href="aptus://offtex_lite-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite Editor</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_lite-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite Editor</a>
+		</td>
 		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
 		</td>
 		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
@@ -106,10 +108,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
 		</td>
-		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
+		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
 		</td>
 		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
@@ -120,10 +122,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
-		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
+		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
 	</tr>
