--- a/7/lib/sparky-aptus-appcenter/tools.html
+++ b/7/lib/sparky-aptus-appcenter/tools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2020
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: September 13, 2021 by pavroo
 -->
 	<head>
 		<title>APTus Tools | APTus AppCenter</title>
@@ -90,8 +90,8 @@ Last update: June 13, 2021 by pavroo
 		<!-- clean user cache -->
 		<td><a href="aptus://apttool_usercache" class="button2"><img src="images/user.svg" class="appicon"><br /><span><script>dict.print('apttool', 'usercache');</script></span></a>
 		</td>
-		<!-- empty -->
-		<td>
+		<!-- terminal -->
+		<td><a href="aptus://apttool_sparkyterm" class="button2"><img src="images/terminal.svg" class="appicon"><br /><span>Terminal</span></a>
 		</td>
 	</tr>
 </tbody>
