--- a/7/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: September 24, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_foot" class="button1"><img src="images/terminal.svg" class="appicon"><br />Foot</a>
+		</td>
 		<td><a href="aptus://accter_gnome-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />GNOME Terminal</a>
 		</td>
 		<td><a href="aptus://accter_guake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Guake</a>
@@ -64,10 +66,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_mate-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />MATE Terminal</a>
 		</td>
-		<td><a href="aptus://accter_mlterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />MLterm</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_mlterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />MLterm</a>
+		</td>
 		<td><a href="aptus://accter_pangoterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pangoterm</a>
 		</td>
 		<td><a href="aptus://accter_pterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pterm</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
 		</td>
-		<td><a href="aptus://accter_stterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />STterm</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_stterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />STterm</a>
+		</td>
 		<td><a href="aptus://accter_terminator" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminator</a>
 		</td>
 		<td><a href="aptus://accter_terminology" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminology</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
 		</td>
-		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
+		</td>
 		<td><a href="aptus://accter_xterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xterm </a>
 		</td>
 		<td><a href="aptus://accter_yeahconsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />YeahConsole</a>
