--- a/7/lib/sparky-aptus-appcenter/accessories-weather.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-weather.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: September 24, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Weather | APTus AppCenter</title>
@@ -44,12 +44,16 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accwea_gis-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />Gis Weather</a>
 		</td>
-		<!--<td><a href="aptus://accwea_gnome-shell-extension-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Shell Extension Weather</a>
-		</td>-->
+		<td><a href="aptus://accwea_gnome-shell-extension-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Shell Extension Weather</a>
+		</td>
 		<td><a href="aptus://accwea_gnome-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Weather</a>
+		</td>
+		<td><a href="aptus://accwea_meteo-qt" class="button1"><img src="images/weather.svg" class="appicon"><br />Meteo-Qt</a>
 		</td>
 		<td><a href="aptus://accwea_weather-util" class="button1"><img src="images/terminal.svg" class="appicon"><br />Weather Util</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accwea_wmweather+" class="button1"><img src="images/weather.svg" class="appicon"><br />WMWeather+</a>
 		</td>
 		<td><a href="aptus://accwea_xfce4-weather-plugin" class="button1"><img src="images/weather.svg" class="appicon"><br />Xfce4 Weather Plugin</a>
