--- a/6/lib/sparky-aptus-appcenter/accessories-monitoring.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-monitoring.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: October 8, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Monitoring | APTus AppCenter</title>
@@ -46,14 +46,16 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accmon_cpu-x" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPU-X</a>
 		</td>
+		<td><a href="aptus://accmon_discover" class="button1"><img src="images/terminal.svg" class="appicon"><br />Discover</a>
+		</td>
 		<td><a href="aptus://accmon_sensors-applet" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME Sensors Applet</a>
 		</td>
 		<td><a href="aptus://accmon_gnome-system-monitor" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME System Monitor</a>
 		</td>
-		<td><a href="aptus://accmon_gnome-usage" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME Usage</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accmon_gnome-usage" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME Usage</a>
+		</td>
 		<td><a href="aptus://accmon_hardinfo" class="button1"><img src="images/hwinfo.svg" class="appicon"><br />Hardinfo</a>
 		</td>
 		<td><a href="aptus://accmon_htop" class="button1"><img src="images/htop.svg" class="appicon"><br />Htop</a>
@@ -62,12 +64,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accmon_inxi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Inxi</a>
 		</td>
+		<td><a href="aptus://accmon_kdiskmark" class="button1"><img src="images/baobab.svg" class="appicon"><br />KDiskMark</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_linux-cpupower" class="button1"><img src="images/hwinfo.svg" class="appicon"><br />Linux CPU Power</a>
 		</td>
 		<td><a href="aptus://accmon_lm-sensors" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lm-sensors</a>
-		</td>
-	</tr>
-	<tr>	
+		</td>	
 		<td><a href="aptus://accmon_lshw" class="button1"><img src="images/terminal.svg" class="appicon"><br />lshw</a>
 		</td>
 		<td><a href="aptus://accmon_lxtask" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />LXTask</a>
@@ -76,12 +80,12 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accmon_mate-sensors-applet-nvidia" class="button1"><img src="images/nvidia.svg" class="appicon"><br />MATE Sensors Applet NVIDIA</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_mrtgutils-sensors" class="button1"><img src="images/terminal.svg" class="appicon"><br />MRTGutils Sensors</a>
 		</td>
 		<td><a href="aptus://accmon_netdata" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Netdata</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_nmon" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmon</a>
 		</td>
 		<td><a href="aptus://accmon_nvtop" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvtop</a>
@@ -90,12 +94,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accmon_screenfetch" class="button1"><img src="images/terminal.svg" class="appicon"><br />screenFetch</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_sparky-system" class="button1"><img src="images/computer.svg" class="appicon"><br />Sparky System</a>
+		</td>
+		<td><a href="aptus://accmon_vnstat" class="button1"><img src="images/terminal.svg" class="appicon"><br />vnStat</a>
 		</td>
 		<td><a href="aptus://accmon_xfce4-sensors-plugin" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Sensors Plugin</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_xfce4-taskmanager" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Task Manager</a>
 		</td>
 		<td><a href="aptus://accmon_xsensors" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xsensors</a>
