--- a/7/lib/sparky-aptus-appcenter/development.html
+++ b/7/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: October 8, 2021 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -72,16 +72,18 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_cudatext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Cudatext</a>
 		</td>
+		<td><a href="aptus://devtoo_dialect" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Dialect</a>
+		</td>
 		<td><a href="aptus://devtoo_deepl-linux" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />DeepL-Linux</a>
 		</td>
 		<td><a href="aptus://devtoo_edi" class="button1"><img src="images/text-script.svg" class="appicon"><br />EDI</a>
 		</td>
 		<td><a href="aptus://devtoo_eflete" class="button1"><img src="images/text-script.svg" class="appicon"><br />Eflete</a>
 		</td>
-		<td><a href="aptus://devtoo_emacs-gtk" class="button1"><img src="images/emacs.svg" class="appicon"><br />Emacs GTK</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_emacs-gtk" class="button1"><img src="images/emacs.svg" class="appicon"><br />Emacs GTK</a>
+		</td>
 		<td><a href="aptus://devtoo_enventor" class="button1"><img src="images/text-script.svg" class="appicon"><br />Enventor</a>
 		</td>
 		<td><a href="aptus://devtoo_eric" class="button1"><img src="images/python.svg" class="appicon"><br />Eric</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_geany" class="button1"><img src="images/geany.svg" class="appicon"><br />Geany</a>
 		</td>
-		<td><a href="aptus://devtoo_ghex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Ghex</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_ghex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Ghex</a>
+		</td>
 		<td><a href="aptus://devtoo_git" class="button1"><img src="images/git.svg" class="appicon"><br />Git</a>
 		</td>
 		<td><a href="aptus://devtoo_gitg" class="button1"><img src="images/git.svg" class="appicon"><br />Gitg</a>
@@ -106,10 +108,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_gitweb" class="button1"><img src="images/git.svg" class="appicon"><br />Git Web</a>
 		</td>
-		<td><a href="aptus://devtoo_glade" class="button1"><img src="images/glade.svg" class="appicon"><br />Glade</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_glade" class="button1"><img src="images/glade.svg" class="appicon"><br />Glade</a>
+		</td>
 		<td><a href="aptus://devtoo_golang" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Go Lang</a>
 		</td>
 		<td><a href="aptus://devtoo_groovy" class="button1"><img src="images/java.svg" class="appicon"><br />Groovy</a>
@@ -120,10 +122,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
 		</td>
-		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
+		</td>
 		<td><a href="aptus://devtoo_kompare" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kompare</a>
 		</td>
 		<td><a href="aptus://devtoo_latex-cjk-all" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeX CJK</a>
@@ -134,10 +136,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_latexml" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXml</a>
 		</td>
-		<td><a href="aptus://devtoo_lazarus" class="button1"><img src="images/text-script.svg" class="appicon"><br />Lazarus</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_lazarus" class="button1"><img src="images/text-script.svg" class="appicon"><br />Lazarus</a>
+		</td>
 		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
 		</td>
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
@@ -148,10 +150,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_mono-complete" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Mono</a>
 		</td>
-		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
+		</td>
 		<td><a href="aptus://devtoo_nodejs" class="button1"><img src="images/javascript.svg" class="appicon"><br />Node.js</a>
 		</td>
 		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
@@ -162,10 +164,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
 		</td>
-		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
+		</td>
 		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
 		</td>
 		<td><a href="aptus://devtoo_ruby" class="button1"><img src="images/ruby.svg" class="appicon"><br />Ruby</a>
@@ -176,10 +178,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_texstudio" class="button1"><img src="images/tex.svg" class="appicon"><br />TeXstudio</a>
 		</td>
-		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
+		</td>
 		<td><a href="aptus://devtoo_twine" class="button1"><img src="images/python.svg" class="appicon"><br />Twine</a>
 		</td>
 		<td><a href="aptus://devtoo_umbrello" class="button1"><img src="images/kde.svg" class="appicon"><br />Umbrello</a>
@@ -190,10 +192,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
-		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />VSCodium</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />VSCodium</a>
+		</td>
 		<td><a href="aptus://devtoo_wxhexeditor" class="button1"><img src="images/text-script.svg" class="appicon"><br />wxHex Editor</a>
 		</td>
 	</tr>
