--- a/7/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 4, 2021 by pavroo
+Last update: October 8, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -124,6 +124,8 @@ Last update: September 4, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
+		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
