--- a/6/lib/sparky-aptus-appcenter/accessories-translators.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-translators.html
@@ -6,7 +6,7 @@ License: GNU GPL 3
 Last update: October 10, 2021 by pavroo
 -->
 	<head>
-		<title>Accessories -> Clipboards | APTus AppCenter</title>
+		<title>Accessories -> Translators | APTus AppCenter</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 		<script src="./js/lang.js" type="text/javascript"></script>
 	</head>
@@ -40,21 +40,17 @@ Last update: October 10, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://acccli_clipit" class="button1"><img src="images/task.svg" class="appicon"><br />Clipit</a>
+		<td><a href="aptus://acctra_deepl-linux" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />DeepL-Linux</a>
 		</td>
-		<td><a href="aptus://acccli_copyq" class="button1"><img src="images/task.svg" class="appicon"><br />CopyQ</a>
+		<td><a href="aptus://acctra_dictconv" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Dictconv</a>
 		</td>
-		<td><a href="aptus://acccli_diodon" class="button1"><img src="images/task.svg" class="appicon"><br />Diodon</a>
+		<td><a href="aptus://acctra_gnome-dictionary" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />GNOME Dictionary</a>
 		</td>
-		<td><a href="aptus://acccli_gpaste" class="button1"><img src="images/task.svg" class="appicon"><br />GPaste</a>
+		<td><a href="aptus://acctra_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Golden Dict</a>
 		</td>
-		<td><a href="aptus://acccli_parcellite" class="button1"><img src="images/task.svg" class="appicon"><br />Parcellite</a>
+		<td><a href="aptus://acctra_qstardict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />QStarDict</a>
 		</td>
-		<td><a href="aptus://acccli_qlipper" class="button1"><img src="images/task.svg" class="appicon"><br />Qlipper</a>
-		</td>
-	</tr>
-	<tr>
-		<td><a href="aptus://acccli_xclip" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xclip</a>
+		<td><a href="aptus://acctra_sdcv" class="button1"><img src="images/terminal.svg" class="appicon"><br />StarDict Console</a>
 		</td>
 	</tr>
 </tbody>
