--- a/7/lib/sparky-aptus-appcenter/accessories-clipboards.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-clipboards.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: October 10, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Clipboards | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: June 13, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://acccli_clipit" class="button1"><img src="images/task.svg" class="appicon"><br />Clipit</a>
+		</td>
 		<td><a href="aptus://acccli_copyq" class="button1"><img src="images/task.svg" class="appicon"><br />CopyQ</a>
 		</td>
 		<td><a href="aptus://acccli_diodon" class="button1"><img src="images/task.svg" class="appicon"><br />Diodon</a>
@@ -50,6 +52,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://acccli_qlipper" class="button1"><img src="images/task.svg" class="appicon"><br />Qlipper</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://acccli_xclip" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xclip</a>
 		</td>
 	</tr>
