--- a/7/lib/sparky-aptus-appcenter/accessories.html
+++ b/7/lib/sparky-aptus-appcenter/accessories.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: October 10, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories | APTus AppCenter</title>
@@ -56,15 +56,15 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="accessories-terminals.html" class="button"><span><script>dict.print('main', 'term');</script></span></a>
 		</td>
-		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
+		<td><a href="accessories-translators.html" class="button"><span><script>dict.print('main', 'translators');</script></span></a>
 		</td>
-		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
+		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
+		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
 		</td>
-		<td>
+		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		<td>
 		</td>
