--- a/7/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/7/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 27, 2021 by pavroo
+Last update: October 15, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -80,7 +80,7 @@ Last update: August 27, 2021 by pavroo
 		</td>-->
 		<td><a href="aptus://graedi_karbon" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />Karbon</a>
 		</td>
-		<td><a href="aptus://graedi_kolourpaint4" class="button1"><img src="images/kolourpaint.svg" class="appicon"><br />Kolourpaint4</a>
+		<td><a href="aptus://graedi_kolourpaint" class="button1"><img src="images/kolourpaint.svg" class="appicon"><br />Kolourpaint</a>
 		</td>
 	</tr>
 	<tr>
