--- a/7/lib/sparky-aptus-appcenter/accessories-archivers.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-archivers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: October 15, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Archivers | APTus AppCenter</title>
@@ -78,11 +78,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_tar" class="button1"><img src="images/tar.svg" class="appicon"><br />TAR</a>
 		</td>
-		<td><a href="aptus://accarc_unrar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unrar</a>
+		<td><a href="aptus://accarc_unar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unarchiver</a>
 		</td>
 	</tr>
-	<tr>	
+	<tr>
+		<td><a href="aptus://accarc_unrar" class="button1"><img src="images/rar.svg" class="appicon"><br />Unrar</a>
+		</td>
 		<td><a href="aptus://accarc_unrar-free" class="button1"><img src="images/rar.svg" class="appicon"><br />Unrar Free</a>
+		</td>
 		<td><a href="aptus://accarc_unzip" class="button1"><img src="images/zip.svg" class="appicon"><br />Unzip</a>
 		</td>
 		<td><a href="aptus://accarc_xarchiver" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Xarchiver</a>
@@ -91,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accarc_xz-utils" class="button1"><img src="images/arc.svg" class="appicon"><br />XZ Utils</a>
 		</td>
-		<td><a href="aptus://accarc_zip" class="button1"><img src="images/zip.svg" class="appicon"><br />ZIP</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accarc_zip" class="button1"><img src="images/zip.svg" class="appicon"><br />ZIP</a>
+		</td>
 		<td><a href="aptus://accarc_zipper.app" class="button1"><img src="images/file-roller.svg" class="appicon"><br />Zipper</a>
 		</td>
 		<td><a href="aptus://accarc_ziptool" class="button1"><img src="images/zip.svg" class="appicon"><br />Ziptool</a>
