--- a/7/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/7/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 15, 2021 by pavroo
+Last update: October 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -76,7 +76,7 @@ Last update: August 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
 		</td>
-		<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
+		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
 		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
