--- a/6/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 10, 2021 by pavroo
+Last update: October 28, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -69,6 +69,8 @@ Last update: October 10, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_jgmenu" class="button1"><img src="images1/panel.svg" class="appicon"><br />Jgmenu</a>
+		</td>
 		<td><a href="aptus://accoth_kdocker" class="button1"><img src="images1/panel.svg" class="appicon"><br />KDocker</a>
 		</td>
 		<td><a href="aptus://accoth_komorebi" class="button1"><img src="images/desktop.svg" class="appicon"><br />Komorebi</a>
@@ -79,10 +81,10 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
 		</td>
-		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
+		</td>
 		<td><a href="aptus://accoth_obconf" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf</a>
 		</td>
 		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
@@ -93,10 +95,10 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_qreator" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qreator</a>
 		</td>
-		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
+		</td>
 		<td><a href="aptus://accoth_qtqr" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />QtQR</a>
 		</td>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
@@ -107,10 +109,10 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
-		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
+		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
@@ -121,10 +123,10 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
 		</td>
-		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
+		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
