--- a/6/lib/sparky-aptus-appcenter/development.html
+++ b/6/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 10, 2021 by pavroo
+Last update: October 28, 2021 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -191,6 +191,12 @@ Last update: October 10, 2021 by pavroo
 		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />VSCodium</a>
 		</td>
 		<td><a href="aptus://devtoo_wxhexeditor" class="button1"><img src="images/text-script.svg" class="appicon"><br />wxHex Editor</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://devtoo_yad" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Yad</a>
+		</td>
+		<td><a href="aptus://devtoo_zenity" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Zenity</a>
 		</td>
 	</tr>
 </tbody>
