--- a/6/lib/sparky-aptus-appcenter/accessories.html
+++ b/6/lib/sparky-aptus-appcenter/accessories.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 10, 2021 by pavroo
+Last update: October 28, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories | APTus AppCenter</title>
@@ -50,23 +50,23 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="accessories-filemanagers.html" class="button"><span><script>dict.print('main', 'filemanagers');</script></span></a>
 		</td>
-		<td><a href="accessories-monitoring.html" class="button"><span><script>dict.print('main', 'monitor');</script></span></a>
+		<td><a href="accessories-icons.html" class="button"><span><script>dict.print('main', 'icons');</script></span></a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-monitoring.html" class="button"><span><script>dict.print('main', 'monitor');</script></span></a>
+		</td>
 		<td><a href="accessories-terminals.html" class="button"><span><script>dict.print('main', 'term');</script></span></a>
 		</td>
 		<td><a href="accessories-translators.html" class="button"><span><script>dict.print('main', 'translators');</script></span></a>
 		</td>
-		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
+		</td>
 		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
 		</td>
 		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
