--- a/6/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/6/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -80,7 +80,7 @@ Last update: August 27, 2021 by pavroo
 		</td>-->
 		<td><a href="aptus://graedi_karbon" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />Karbon</a>
 		</td>
-		<td><a href="aptus://graedi_kolourpaint4" class="button1"><img src="images/kolourpaint.svg" class="appicon"><br />Kolourpaint4</a>
+		<td><a href="aptus://graedi_kolourpaint" class="button1"><img src="images/kolourpaint.svg" class="appicon"><br />Kolourpaint</a>
 		</td>
 	</tr>
 	<tr>
